--- a/VS_c++/VS_c++.vcxproj
+++ b/VS_c++/VS_c++.vcxproj
@@ -19,6 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Count_characters_in_your_string.cpp" />
     <ClCompile Include="Moving_Zeros_To_The_End.cpp" />
     <ClCompile Include="ParseInt()_reloaded.cpp" />
     <ClCompile Include="Pick_peaks.cpp" />
