Added Delete occurrences of an element if it occurs more than n times

--- a/VS_c++/VS_c++.vcxproj.filters
+++ b/VS_c++/VS_c++.vcxproj.filters
@@ -36,5 +36,8 @@
     <ClCompile Include="Binary_Addition.cpp">
       <Filter>Source Files\CodeWars_Problems</Filter>
     </ClCompile>
+    <ClCompile Include="Delete_occurrences_of_an_element_if_it_occurs_more_than_n_times.cpp">
+      <Filter>Source Files\CodeWars_Problems</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
