--- a/VS_c++/VS_c++.vcxproj
+++ b/VS_c++/VS_c++.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Binary_Addition.cpp" />
     <ClCompile Include="Build_Tower.cpp" />
+    <ClCompile Include="Counting_Duplicates.cpp" />
     <ClCompile Include="Count_characters_in_your_string.cpp" />
     <ClCompile Include="Delete_occurrences_of_an_element_if_it_occurs_more_than_n_times.cpp" />
     <ClCompile Include="Find_the_unique_number.cpp" />
