--- a/VS_c++/VS_c++.vcxproj
+++ b/VS_c++/VS_c++.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="ParseInt()_reloaded.cpp" />
     <ClCompile Include="Pick_peaks.cpp" />
     <ClCompile Include="Range_Extraction.cpp" />
+    <ClCompile Include="String_incrementer.cpp" />
     <ClCompile Include="Take_a_Number_And_Sum_Its_Digits_Raised_To_The_Consecutive_Powers_And_Eureka!!.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
