--- a/VS_c++/VS_c++.vcxproj.filters
+++ b/VS_c++/VS_c++.vcxproj.filters
@@ -55,7 +55,7 @@
       <Filter>Source Files\CodeWars_Problems</Filter>
     </ClCompile>
     <ClCompile Include="String_incrementer.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\CodeWars_Problems</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
