Added Tribonacci Sequence

--- a/VS_c++/VS_c++.vcxproj
+++ b/VS_c++/VS_c++.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="Range_Extraction.cpp" />
     <ClCompile Include="String_incrementer.cpp" />
     <ClCompile Include="Take_a_Number_And_Sum_Its_Digits_Raised_To_The_Consecutive_Powers_And_Eureka!!.cpp" />
+    <ClCompile Include="Tribonacci_Sequence.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
