--- a/VS_c++/VS_c++.vcxproj
+++ b/VS_c++/VS_c++.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Binary_Addition.cpp" />
     <ClCompile Include="Bouncing_Balls.cpp" />
+    <ClCompile Include="Build_a_pile_of_Cubes.cpp" />
     <ClCompile Include="Build_Tower.cpp" />
     <ClCompile Include="Counting_Duplicates.cpp" />
     <ClCompile Include="Count_characters_in_your_string.cpp" />
