--- a/VS_c++/VS_c++.vcxproj
+++ b/VS_c++/VS_c++.vcxproj
@@ -31,6 +31,7 @@
     <ClCompile Include="Moving_Zeros_To_The_End.cpp" />
     <ClCompile Include="ParseInt()_reloaded.cpp" />
     <ClCompile Include="Pick_peaks.cpp" />
+    <ClCompile Include="Primes_in_numbers.cpp" />
     <ClCompile Include="Range_Extraction.cpp" />
     <ClCompile Include="Sort_the_odd.cpp" />
     <ClCompile Include="String_incrementer.cpp" />
