--- a/VS_c++/VS_c++.vcxproj.filters
+++ b/VS_c++/VS_c++.vcxproj.filters
@@ -69,5 +69,8 @@
     <ClCompile Include="Sort_the_odd.cpp">
       <Filter>Source Files\CodeWars_Problems</Filter>
     </ClCompile>
+    <ClCompile Include="Primes_in_numbers.cpp">
+      <Filter>Source Files\CodeWars_Problems</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
