Added Simple Encryption #1 - Alternating Split

--- a/VS_c++/VS_c++.vcxproj
+++ b/VS_c++/VS_c++.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="Pick_peaks.cpp" />
     <ClCompile Include="Primes_in_numbers.cpp" />
     <ClCompile Include="Range_Extraction.cpp" />
+    <ClCompile Include="Simple_Encryption_#1_-_Alternating_Split.cpp" />
     <ClCompile Include="Sort_the_odd.cpp" />
     <ClCompile Include="String_incrementer.cpp" />
     <ClCompile Include="Take_a_Number_And_Sum_Its_Digits_Raised_To_The_Consecutive_Powers_And_Eureka!!.cpp" />
