Added Design a Simple Automaton (Finite State Machine)

--- a/VS_c++/VS_c++.vcxproj.filters
+++ b/VS_c++/VS_c++.vcxproj.filters
@@ -87,5 +87,8 @@
     <ClCompile Include="LZ78_compression.cpp">
       <Filter>Source Files\CodeWars_Problems</Filter>
     </ClCompile>
+    <ClCompile Include="Design_a_Simple_Automaton_(Finite_State_Machine).cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
